feat: implement document deletion functionality with associated resource cleanup and error handling